# psOff_logan

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  index.js  main.cpp  p7d.cpp  p7d.h  p7da.cpp  p7da.h  package.json
.github/matchers/: compilers.json
.github/workflows/: build.yml
libp7d/: CMakeLists.txt  p7d.cpp  p7d.h  p7da.cpp  p7da.h  p7exceptions.h
libplog/: CMakeLists.txt  ploga.cpp  ploga.h
nodelib/: main.cpp
old/: CMakeLists.txt  index.js
old/libp7d/: CMakeLists.txt  p7d.cpp  p7d.h
standalone/: main.cpp
